@@ -1,3 +1,8 @@
+Thu Jan 26 10:57:30 UTC 2012  Martin Corino  <mcorino@remedy.nl>
+
+        * dance/LocalityManager/Interceptors/Best_Effort.cpp:
+          Fixed incorrect log texts.
+
 Mon Jan 23 09:49:47 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * dance/LocalityManager/Scheduler/Scheduler.mpc:
